src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
